# birds

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt  HardwareManager.c  HardwareManager.h  platform.c  platform.h
components/BSP/Button/: key.c  key.h
components/BSP/ES8388/: es8388.c  es8388.h
components/BSP/I2S/: i2s.c  i2s.h
components/BSP/IIC/: iic.c  iic.h
components/BSP/LCD/: lcd.c  lcd.h
components/BSP/LED/: led.c  led.h
components/BSP/NVS/: nvs.c  nvs.h
components/BSP/SDIO/: exfuns.c  exfuns.h  spi_sdcard.c  spi_sdcard.h
components/BSP/SPI/: spi.c  spi.h
components/BSP/XL9555/: xl9555.c  xl9555.h
main/: main.c
main/APP/: ApplicationLed.c  ApplicationMusic.c  TaskManage.c  TaskManage.h  applicationled.h  applicationmusic.h  fonts.c  fonts.h  lwip_demo.c  lwip_demo.h  text.c  text.h  wavplay.c  wavplay.h  wifi_config.c  wifi_config.h
